Added settings button for popup in users frontend

--- a/assets/css/cookies.css
+++ b/assets/css/cookies.css
@@ -38,6 +38,9 @@
 	max-width: 1170px;
 	margin: 0 auto;
 }
+#cookies-button-settings.cookies-button-ok{
+	margin-right: 20px;
+}
 
 @media (max-width: 1200px) {
 	.cookie-content {
